--- a/helloworld.csproj
+++ b/helloworld.csproj
@@ -11,4 +11,8 @@
     <Folder Include="test/" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EPPlus" Version="5.6.3" />
+  </ItemGroup>
+
 </Project>
