--- a/helloworld.csproj
+++ b/helloworld.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="5.6.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
